--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="twitter:image" content="https://bettergpt.chat/social.png" />
     <meta
       name="description"
-      content="Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API! "
+      content="VanzBot Based From ChatGPT - Use this page as you like use Your Own API KEY! "
     />
     <meta
       name="twitter:description"
-      content="Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API! "
+      content="VanzBot Based From ChatGPT - Use this page as you like use Your Own API KEY! "
     />
     <meta name="twitter:title" content="Better ChatGPT" />
     <meta name="twitter:card" content="summary_large_image" />
